--- a/main.html
+++ b/main.html
@@ -1,30 +1,67 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="container">
+		<h2>Carousel Example</h2>  
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+			<li data-target="#myCarousel" data-slide-to="3"></li>
+			<li data-target="#myCarousel" data-slide-to="4"></li>
+		  </ol>
+	  
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+			<div class="item first-slide ">
+			 	 <img src="https://i.ytimg.com/vi/K2KKgtYZHFE/maxresdefault.jpg" alt="Los Angeles" style="width:100%;">
+			</div>
+	  
+			<div class="item second-slide">
+			  	<img src="https://i.ytimg.com/vi/Z0A93TcORrc/maxresdefault.jpg" alt="Chicago" style="width:100%;">
+			</div>
+		  
+			<div class="item third-slide active">
+			  	<img src="https://i.ytimg.com/vi/Zbbs_xmdNs4/maxresdefault.jpg" alt="New york" style="width:100%;">
+			</div>
 
+			<div class="item fourth-slide">
+				<img src="https://i.ytimg.com/vi/Zbbs_xmdNs4/maxresdefault.jpg" alt="New york" style="width:100%;">
+			</div>
+
+			<div class="item fifth-slide">
+				<img src="https://i.ytimg.com/vi/Zbbs_xmdNs4/maxresdefault.jpg" alt="New york" style="width:100%;">
+			</div>
+
+		  </div>
+	  
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+			<span class="sr-only">Left</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+			<span class="sr-only">Right</span>
+		  </a>
+		</div>
+	  </div>
+
+
+
+<script type="text/javascript" src="./script.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
+ 
